added contact link

--- a/pecan/index.html
+++ b/pecan/index.html
@@ -32,6 +32,7 @@
                     <ul class="dropdown-menu">
                         <li class = "btn btn-warning active"><span class="label label-warning"><a href="">Denna sida</a></span></li>
                         <li ><a class = "bg-warning" href="recept/pecanniklas.html">Receptet</a></li> 
+                        <li ><a class = "bg-warning" href="./Form.html">kontakta oss</a></li> 
                     </ul>
                 </div>
             </div>
